Fixed scroll on mobile

--- a/CSS/homework.css
+++ b/CSS/homework.css
@@ -21,11 +21,12 @@
 .schedule {
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
+  align-items: flex-start;
+  justify-content: flex-start;
   width: 100%;
   gap: 80px;
   margin-top: 48px;
+  padding-bottom: 48px;
 }
 @media screen and (max-width: 600px) {
   .schedule {
@@ -61,10 +62,6 @@
   .task {
     gap: 5%;
   }
-}
-
-.task:last-of-type {
-  padding-bottom: 48px;
 }
 
 .days {
